examples/test/testpolicy11394.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11394
  namespace: namespace185
spec:
  podSelector:
    matchLabels:
      key17: value49
      key19: value5
      key4: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value16
          key48: value24
          key24: value36
